// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when DE and Association have identical names should have validation failures for each entity 1`] = `"Association named EntityName is a duplicate declaration of that name."`;

exports[`when DE and Association have identical names should have validation failures for each entity 2`] = `
Object {
  "column": 14,
  "line": 9,
  "tokenText": "EntityName",
}
`;

exports[`when DE and Association have identical names should have validation failures for each entity 3`] = `"Domain Entity named EntityName is a duplicate declaration of that name."`;

exports[`when DE and Association have identical names should have validation failures for each entity 4`] = `
Object {
  "column": 16,
  "line": 2,
  "tokenText": "EntityName",
}
`;

exports[`when DE and Common have identical names should have validation failures for each entity 1`] = `"Common named EntityName is a duplicate declaration of that name."`;

exports[`when DE and Common have identical names should have validation failures for each entity 2`] = `
Object {
  "column": 9,
  "line": 9,
  "tokenText": "EntityName",
}
`;

exports[`when DE and Common have identical names should have validation failures for each entity 3`] = `"Domain Entity named EntityName is a duplicate declaration of that name."`;

exports[`when DE and Common have identical names should have validation failures for each entity 4`] = `
Object {
  "column": 16,
  "line": 2,
  "tokenText": "EntityName",
}
`;

exports[`when DE and SharedInteger have identical names should have validation failures for each entity 1`] = `"Domain Entity named EntityName is a duplicate declaration of that name."`;

exports[`when DE and SharedInteger have identical names should have validation failures for each entity 2`] = `
Object {
  "column": 16,
  "line": 2,
  "tokenText": "EntityName",
}
`;

exports[`when DE and SharedInteger have identical names should have validation failures for each entity 3`] = `"Shared Integer named EntityName is a duplicate declaration of that name."`;

exports[`when DE and SharedInteger have identical names should have validation failures for each entity 4`] = `
Object {
  "column": 17,
  "line": 9,
  "tokenText": "EntityName",
}
`;
